# jupytergis

./: .eslintignore  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .readthedocs.yaml  .rstcheck.cfg  .yarnrc.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  RELEASE.md  Untitled.ipynb  editable.JGIS  environment-dev.yml  eslint.config.js  index.html  lerna.json  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr_description.md  processing.py  pyproject.toml  requirements-build.txt  review_1268.md  tsconfigbase.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build.yml  (+22 more)
.jupyter/: collaboration_sessions.json
.nblink/: environment.yml  nblink-lock.json
_jlite_env/: environment.yml  jupyter-lite.json
binder/: environment.yml  postBuild
cnes-examples/: footprints.jGIS
docs/: build-on-change.sh  build.sh  changelog.md  changelog.rst  clean.sh  collab.rst  conf.py  contributing.rst  environment-docs.yml  environment.yml  extension.rst  gallery.md  index.md  index.rst  install.rst  jupyter-lite-limitations.md  jupyter-lite.json  jupyter_lite_config.json  refs.bib
examples/: 01-Create_a_new_JGIS_document.ipynb  3d_terrain.jGIS  99-Explore_data_in_a_map.ipynb  99-OpenEO-copernicus.ipynb  99-OpenEO-titiler-local.ipynb  99-Open_an_existing_JGIS_Project_and_add_layers.ipynb  99-Symbology.ipynb  99-Vector_styling.ipynb  Earthquakes_Centroids.json  Notebook.ipynb  buildings.jGIS  buildings.qgz  cloud_optimized_geotiff.jGIS  cog.jGIS  contour.jGIS  earthquakes-no-filter.jGIS  earthquakes.jGIS  earthquakes_old.jGIS  earthquakesv2.jGIS  editable.jGIS  eq_symbology.jgis  europe_demo.jGIS  europe_geotiff.jGIS  explore.ipynb  extent_callback_test.ipynb  footprints.jGIS  france_hiking.jGIS  france_regions.json  geoZarr.jGIS  geojson.jGIS  geopackage.jgis  geoparquet.jGIS  geoparquet.jgis  geotif.qgz  geotiff-2.jGIS  geotiff-3.jGIS  geotiff.jGIS  geotiff.qgz  hillshade.jGIS  image.jGIS  (+36 more)
joss/: paper.md
lite/: environment.yml  jupyter-lite.json  jupyter_lite_config.json
paper/: paper.bib  paper.md
python/jupytergis/: README.md  pyproject.toml
python/jupytergis/jupytercad/: __init__.py
python/jupytergis/jupytergis/: __init__.py
python/jupytergis/scripts/: bump-version.py
python/jupytergis_core/: .gitignore  README.md  extension.webpack.config.js  install.json  package.json  pyproject.toml  tsconfig.json  webpack.config.js
python/jupytergis_core/jupyter-config/server-config/: jupytergis_core.json
python/jupytergis_core/jupytergis_core/: __init__.py  color_ramps.py  color_ramps_data.json  colors.py  geojson_ydoc.py  handler.py  jgis_ydoc.py  jupyterlite_workaround_addon.py  jupyterlite_xeus_workaround.py  processing.py  qgis.py
python/jupytergis_core/jupytergis_core/migrations/: __init__.py  v0_5_to_v0_6.py  v0_6_to_v0_7.py
python/jupytergis_core/jupytergis_core/schema/: __init__.py
python/jupytergis_core/jupytergis_core/tests/: test_colors.py  test_migrations.py  test_processing.py
python/jupytergis_core/schema/: jupytergis-settings.json
python/jupytergis_core/src/: externalcommand.ts  factory.ts  index.ts  layerBrowserRegistry.ts  plugin.ts  schemaregistry.ts  tour.ts
python/jupytergis_core/src/@types/: wasm.ts
python/jupytergis_core/src/geojsonplugin/: model.ts  modelfactory.ts  plugins.ts
python/jupytergis_core/src/jgisplugin/: modelfactory.ts  plugins.ts
python/jupytergis_core/src/jgisplugin/processing/: processingPalette.ts
python/jupytergis_core/tests/: test_qgis.py  utils.py
python/jupytergis_core/tests/files/: project0.qgs
python/jupytergis_lab/: .gitignore  .prettierignore  README.md  install.json  package.json  pyproject.toml
python/jupytergis_lab/jupytergis_lab/: __init__.py  explore.py
python/jupytergis_lab/jupytergis_lab/notebook/: __init__.py  cad_document.py  explore.py  geo_debug.py  gis_document.py  layer_wrapper.py  symbology.py  utils.py  y_connector.py
python/jupytergis_lab/jupytergis_lab/notebook/objects/: __init__.py
python/jupytergis_lab/jupytergis_lab/notebook/objects/_schema/: __init__.py  jgis.py
python/jupytergis_lab/jupytergis_lab/notebook/tests/: test_api.py  test_encoding_enum_sync.py  test_zoom_to.py
python/jupytergis_lab/src/: index.ts  notebookrenderer.ts
python/jupytergis_lab/src/processing/: processingSubMenu.ts
python/jupytergis_lab/style/: base.css
python/jupytergis_lite/: LICENSE  README.md  pyproject.toml
python/jupytergis_lite/jupytergis/: __init__.py
python/jupytergis_lite/scripts/: bump-version.py
python/jupytergis_qgis/: .gitignore  .prettierignore  LICENSE  README.md  install.json  package.json  pyproject.toml
python/jupytergis_qgis/jupyter-config/server-config/: jupytergis_qgis.json
python/jupytergis_qgis/jupytergis_qgis/: __init__.py  data_defined.py  grammar.py  handlers.py  qgis_loader.py  qgis_ydoc.py
python/jupytergis_qgis/jupytergis_qgis/tests/: test_qgis.py
python/jupytergis_qgis/jupytergis_qgis/tests/files/: project1.qgz  project_bundle.gpkg  project_bundle.qgz  project_gpkg.qgz  project_seed.gpkg  project_seed.qgz  sample.geojson
python/jupytergis_qgis/schema/: qgisplugin.json
python/jupytergis_qgis/src/: index.ts  modelfactory.ts  plugins.ts
python/jupytergis_server/: LICENSE  README.md  pyproject.toml
python/jupytergis_server/etc/jupyter/jupyter_server_config.d/: jupytergis_server.json
python/jupytergis_server/jupytergis_server/: __init__.py  handler.py  server_extension.py
scripts/: build_packages.py  dev-install.py  process.py  test_external_resources.py  utils.py
scripts/layer_gallery/: README.md  config.py  generate.py  models.py  pyproject.toml  thumbnail.py  utils.py
scripts/layer_gallery/layer_gallery/: __init__.py  __main__.py  config.py  generate.py  models.py  thumbnail.py  utils.py
scripts/layer_gallery/tests/: conftest.py  helpers.py  test_generate.py  test_models.py  test_thumbnail.py  test_utils.py
ui-tests/: jupyter_server_test_config.py  package.json  playwright-lite.config.js  playwright.config.js  pnpm-lock.yaml  pnpm-workspace.yaml
(+154 files in other folders)
