[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.5.0,<2"]

[project]
name = "jupytergis-root"
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]

[dependency-groups]
test = [
    "pytest",
    "dirty-equals",
]
build = [
    "build",
    "datamodel-code-generator>=0.23.0",
    "hatchling>=1.5.0,<2",
    "jupyterlab>=4.5.1",
    # TODO: Why do we need these at build-time?
    "jupyter-collaboration>=4,<5",
    "jupyter-collaboration-ui>=2,<3",
    "jupyter-docprovider>=2,<3",
    "jupyter-server-ydoc>=2,<3",
    "mercantile>=1.2",
    "pillow>=10",
    "pydantic>=2.4.2,<3",
    "ruff>=0.6",
    "xyzservices>=2024.6.0",
]


[tool.hatch.version]
path = "python/jupytergis/jupytergis/__init__.py"

[tool.jupyter-releaser]
skip = [ "check-python" ]


[tool.jupyter-releaser.options]
version-cmd = "python scripts/bump-version.py"
python_packages = [
    "python/jupytergis:jupytergis",
    "python/jupytergis_core:jupytergis_core",
    "python/jupytergis_lab:jupytergis_lab",
    "python/jupytergis_qgis:jupytergis_qgis",
    "python/jupytergis_lite:jupytergis_lite",
]

[tool.jupyter-releaser.hooks]
before-bump-version = ["python -m pip install hatch 'jupyterlab>=4.0.0'"]
before-build-npm = [
    "python -m pip install --group build",
    "jlpm",
    "jlpm build:prod",
]

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # bugbear
    "B",
]
ignore = ["E501", "E731"]
