[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.5.0,<2", "tomlkit>=0.13.2,<0.14"]

[project]
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Framework :: Jupyter :: JupyterLab :: Extensions",
  "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "jupytergis_core==0.4.2",
  "jupytergis_lab==0.4.2",
  "jupytergis_qgis==0.4.2",
  "jupyter-collaboration>=3,<4",
  "jupyterlab>=4.3,<5",
]
dynamic = ["version"]
license = {file = "LICENSE"}
name = "jupytergis"
readme = "README.md"
requires-python = ">=3.10"


[tool.hatch.version]
path = "jupytergis/__init__.py"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.check-wheel-contents]
ignore = ["W002"]
