[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.5.0,<2", "tomlkit>=0.13.2,<0.14"]

[project]
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Framework :: Jupyter :: JupyterLab :: Extensions",
  "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
  "Topic :: Scientific/Engineering :: GIS",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "jupytergis_core==0.10.1",
  "jupytergis_lab==0.10.1",
  "jupytergis_qgis==0.10.1",
  "jupyter-collaboration>=3,<4",
  "jupyter-docprovider>=1,<2",
  "jupyter-server-ydoc>=1,<2",
  "jupyter-collaboration-ui>=1,<2",
  "jupyterlab>=4.3,<4.5.0",
]
description = "Collaborative GIS extension for JupyterLab"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "jupytergis"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/geojupyter/jupytergis"
Documentation = "https://jupytergis.readthedocs.io"
Repository = "https://github.com/geojupyter/jupytergis.git"
Issues = "https://github.com/geojupyter/jupytergis/issues"


[tool.hatch.version]
path = "jupytergis/__init__.py"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.check-wheel-contents]
ignore = ["W002"]
