[project]
name = "jupytergis"
description = "Collaborative GIS extension for JupyterLab"
dynamic = ["version"]
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Framework :: Jupyter :: JupyterLab :: Extensions",
  "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
  "Topic :: Scientific/Engineering :: GIS",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jupytergis_core==0.15.0",
  "jupytergis_lab==0.15.0",
  "jupytergis_qgis==0.15.0",
  "jupyter-collaboration>=4,<5",
  "jupyter-docprovider>=2,<3",
  "jupyter-server-ydoc>=2,<3",
  "jupyter-collaboration-ui>=2,<3",
  "jupyterlab>=4.5.1",
]

[project.optional-dependencies]
tiler = [
  "jupyter-xarray-tiler>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/geojupyter/jupytergis"
Documentation = "https://jupytergis.readthedocs.io"
Repository = "https://github.com/geojupyter/jupytergis.git"
Issues = "https://github.com/geojupyter/jupytergis/issues"


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.5.0,<2", "tomlkit>=0.13.2,<0.14"]

[tool.hatch.version]
path = "jupytergis/__init__.py"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.check-wheel-contents]
ignore = ["W002"]
