[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.5.0,<2"]

[project]
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Framework :: Jupyter :: JupyterLab :: Extensions",
  "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
  "Topic :: Scientific/Engineering :: GIS",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "jupytergis_core==0.10.1",
  "jupytergis_lab==0.10.1",
  "my-jupyter-shared-drive<0.2.0",
]
dynamic = ["version"]
license = {file = "LICENSE"}
name = "jupytergis-lite"
readme = "README.md"
requires-python = ">=3.10"


[tool.hatch.version]
path = "jupytergis/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["jupytergis"]

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.check-wheel-contents]
ignore = ["W002"]
