[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "jupytergis-server"
description = "A Jupyter Server extension for JupyterGIS"
requires-python = ">=3.9"
dependencies = [
    "jupyter_server >=2.15.0,<3.0.0",
    "httpx >=0.28.1,<1.0.0",
]
dynamic = [ "version" ]
license = { file = "LICENSE" }

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/geojupyter/jupytergis"

[tool.hatch.version]
path = "jupytergis_server/__init__.py"

[tool.hatch.build.targets.wheel.shared-data]
"etc/jupyter/jupyter_server_config.d" = "etc/jupyter/jupyter_server_config.d"
