[project]
name = "layer-gallery"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "xyzservices",
    "requests",
    "pillow",
    "mercantile",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "mypy>=1.20.0",
    "types-requests",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
mypy_path = [".."]
packages = ["layer_gallery"]
python_version = "3.12"
strict = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "xyzservices",
    "mercantile",
]
ignore_missing_imports = true
